// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/listy/demo/basic.tsx extend context correctly 1`] = `
<div
  class="ant-listy css-var-test-id ant-listy-css-var"
  style="max-height: 400px; overflow-y: auto; overflow-anchor: none;"
>
  <div
    class="ant-listy-item"
    data-key="item:0"
  >
    Item 0
  </div>
  <div
    class="ant-listy-item"
    data-key="item:1"
  >
    Item 1
  </div>
  <div
    class="ant-listy-item"
    data-key="item:2"
  >
    Item 2
  </div>
  <div
    class="ant-listy-item"
    data-key="item:3"
  >
    Item 3
  </div>
  <div
    class="ant-listy-item"
    data-key="item:4"
  >
    Item 4
  </div>
  <div
    class="ant-listy-item"
    data-key="item:5"
  >
    Item 5
  </div>
  <div
    class="ant-listy-item"
    data-key="item:6"
  >
    Item 6
  </div>
  <div
    class="ant-listy-item"
    data-key="item:7"
  >
    Item 7
  </div>
  <div
    class="ant-listy-item"
    data-key="item:8"
  >
    Item 8
  </div>
  <div
    class="ant-listy-item"
    data-key="item:9"
  >
    Item 9
  </div>
  <div
    class="ant-listy-item"
    data-key="item:10"
  >
    Item 10
  </div>
  <div
    class="ant-listy-item"
    data-key="item:11"
  >
    Item 11
  </div>
  <div
    class="ant-listy-item"
    data-key="item:12"
  >
    Item 12
  </div>
  <div
    class="ant-listy-item"
    data-key="item:13"
  >
    Item 13
  </div>
  <div
    class="ant-listy-item"
    data-key="item:14"
  >
    Item 14
  </div>
  <div
    class="ant-listy-item"
    data-key="item:15"
  >
    Item 15
  </div>
  <div
    class="ant-listy-item"
    data-key="item:16"
  >
    Item 16
  </div>
  <div
    class="ant-listy-item"
    data-key="item:17"
  >
    Item 17
  </div>
  <div
    class="ant-listy-item"
    data-key="item:18"
  >
    Item 18
  </div>
  <div
    class="ant-listy-item"
    data-key="item:19"
  >
    Item 19
  </div>
</div>
`;

exports[`renders components/listy/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/listy/demo/drag-sorting.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-listy css-var-test-id ant-listy-css-var"
    style="max-height: 400px; overflow-y: auto; overflow-anchor: none;"
  >
    <div
      class="ant-listy-item"
      data-key="item:0"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 0
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:1"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 1
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:2"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 2
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:3"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 3
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:4"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 4
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:5"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 5
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:6"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 6
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:7"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 7
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:8"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 8
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:9"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 9
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:10"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 10
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:11"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 11
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:12"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 12
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:13"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 13
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:14"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 14
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:15"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 15
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:16"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 16
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:17"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 17
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:18"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 18
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:19"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <button
          aria-describedby="listy-drag-sorting"
          aria-disabled="false"
          aria-roledescription="sortable"
          class="ant-btn css-var-test-id ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
          role="button"
          style="cursor: move;"
          tabindex="0"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="holder"
              class="anticon anticon-holder"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="holder"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                />
              </svg>
            </span>
          </span>
        </button>
        Item 19
      </div>
    </div>
  </div>,
  <div
    id="listy-drag-sorting"
    style="display: none;"
  >
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  </div>,
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-0"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />,
]
`;

exports[`renders components/listy/demo/drag-sorting.tsx extend context correctly 2`] = `[]`;

exports[`renders components/listy/demo/group.tsx extend context correctly 1`] = `
<div
  class="ant-listy css-var-test-id ant-listy-css-var"
  style="max-height: 400px; overflow-y: auto; overflow-anchor: none;"
>
  <div
    class="ant-listy-group-section"
    data-key="group:A"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky"
    >
      A
    </div>
    <div
      class="ant-listy-item"
      data-key="item:0"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(245, 106, 0);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            A
          </span>
        </span>
        Aaron Baker
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:1"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(245, 106, 0);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            A
          </span>
        </span>
        Alice Adams
      </div>
    </div>
  </div>
  <div
    class="ant-listy-group-section"
    data-key="group:B"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky"
    >
      B
    </div>
    <div
      class="ant-listy-item"
      data-key="item:2"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(114, 101, 230);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            B
          </span>
        </span>
        Bella Carter
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:3"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(114, 101, 230);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            B
          </span>
        </span>
        Brian Diaz
      </div>
    </div>
  </div>
  <div
    class="ant-listy-group-section"
    data-key="group:C"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky"
    >
      C
    </div>
    <div
      class="ant-listy-item"
      data-key="item:4"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(255, 191, 0);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            C
          </span>
        </span>
        Chloe Evans
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:5"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(255, 191, 0);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            C
          </span>
        </span>
        Colin Foster
      </div>
    </div>
  </div>
  <div
    class="ant-listy-group-section"
    data-key="group:D"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky"
    >
      D
    </div>
    <div
      class="ant-listy-item"
      data-key="item:6"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(0, 162, 174);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            D
          </span>
        </span>
        Daisy Garcia
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:7"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(0, 162, 174);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            D
          </span>
        </span>
        David Hayes
      </div>
    </div>
  </div>
  <div
    class="ant-listy-group-section"
    data-key="group:E"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky"
    >
      E
    </div>
    <div
      class="ant-listy-item"
      data-key="item:8"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(135, 208, 104);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            E
          </span>
        </span>
        Elena Ingram
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:9"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(135, 208, 104);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            E
          </span>
        </span>
        Eric Jensen
      </div>
    </div>
  </div>
  <div
    class="ant-listy-group-section"
    data-key="group:F"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky"
    >
      F
    </div>
    <div
      class="ant-listy-item"
      data-key="item:10"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(245, 106, 0);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            F
          </span>
        </span>
        Fiona Kim
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:11"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(245, 106, 0);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            F
          </span>
        </span>
        Frank Lopez
      </div>
    </div>
  </div>
  <div
    class="ant-listy-group-section"
    data-key="group:G"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky"
    >
      G
    </div>
    <div
      class="ant-listy-item"
      data-key="item:12"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(114, 101, 230);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            G
          </span>
        </span>
        Grace Miller
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:13"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(114, 101, 230);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            G
          </span>
        </span>
        Gavin Nguyen
      </div>
    </div>
  </div>
  <div
    class="ant-listy-group-section"
    data-key="group:H"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky"
    >
      H
    </div>
    <div
      class="ant-listy-item"
      data-key="item:14"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(255, 191, 0);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            H
          </span>
        </span>
        Hannah Ortiz
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:15"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(255, 191, 0);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            H
          </span>
        </span>
        Henry Parker
      </div>
    </div>
  </div>
  <div
    class="ant-listy-group-section"
    data-key="group:I"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky"
    >
      I
    </div>
    <div
      class="ant-listy-item"
      data-key="item:16"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(0, 162, 174);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            I
          </span>
        </span>
        Iris Quincy
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:17"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(0, 162, 174);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            I
          </span>
        </span>
        Ivan Reed
      </div>
    </div>
  </div>
  <div
    class="ant-listy-group-section"
    data-key="group:J"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky"
    >
      J
    </div>
    <div
      class="ant-listy-item"
      data-key="item:18"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(135, 208, 104);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            J
          </span>
        </span>
        Jack Smith
      </div>
    </div>
    <div
      class="ant-listy-item"
      data-key="item:19"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-gap-small"
      >
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle css-var-test-id ant-avatar-css-var"
          style="background-color: rgb(135, 208, 104);"
        >
          <span
            class="ant-avatar-string"
            style="-webkit-transform: scale(1); transform: scale(1);"
          >
            J
          </span>
        </span>
        Julia Turner
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/listy/demo/group.tsx extend context correctly 2`] = `[]`;

exports[`renders components/listy/demo/rich.tsx extend context correctly 1`] = `
<div
  class="ant-listy css-var-test-id ant-listy-css-var"
  style="max-height: 400px; overflow-y: auto; overflow-anchor: none;"
>
  <div
    class="ant-listy-item"
    data-key="item:0"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(245, 106, 0); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          O
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Olivia
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            08:00
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          commented on your merge request
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-listy-item"
    data-key="item:1"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(114, 101, 230); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          L
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Liam
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            09:17
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          invited you to the quarterly planning review. Please confirm your availability before Friday so the agenda can be finalized in time.
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-listy-item"
    data-key="item:2"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(255, 191, 0); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          E
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Emma
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            10:34
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          mentioned you in the design review thread
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-listy-item"
    data-key="item:3"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(0, 162, 174); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          N
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Noah
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            11:51
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          assigned you a task that is due next Monday. It covers the remaining accessibility issues found in the latest audit.
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-listy-item"
    data-key="item:4"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(245, 106, 0); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          A
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Ava
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            12:08
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          starred the report you shared yesterday
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-listy-item"
    data-key="item:5"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(114, 101, 230); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          E
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Ethan
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            13:25
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          requested changes on your pull request. Most of the comments are about naming and the test coverage of the new cache layer.
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-listy-item"
    data-key="item:6"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(255, 191, 0); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          S
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Sophia
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            14:42
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          commented on your merge request
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-listy-item"
    data-key="item:7"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(0, 162, 174); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          L
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Lucas
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            15:59
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          invited you to the quarterly planning review. Please confirm your availability before Friday so the agenda can be finalized in time.
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-listy-item"
    data-key="item:8"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(245, 106, 0); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          O
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Olivia
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            16:16
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          mentioned you in the design review thread
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-listy-item"
    data-key="item:9"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(114, 101, 230); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          L
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Liam
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            17:33
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          assigned you a task that is due next Monday. It covers the remaining accessibility issues found in the latest audit.
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-listy-item"
    data-key="item:10"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(255, 191, 0); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          E
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Emma
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            18:50
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          starred the report you shared yesterday
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-listy-item"
    data-key="item:11"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-middle"
    >
      <span
        class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
        style="background-color: rgb(0, 162, 174); flex: 0 0 auto;"
      >
        <span
          class="ant-avatar-string"
          style="-webkit-transform: scale(1); transform: scale(1);"
        >
          N
        </span>
      </span>
      <div
        class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
        style="min-width: 0; flex: 1 1 auto;"
      >
        <div
          class="ant-flex css-var-test-id ant-flex-justify-space-between ant-flex-gap-small"
        >
          <span
            class="ant-typography css-var-test-id"
          >
            <strong>
              Noah
            </strong>
          </span>
          <span
            class="ant-typography ant-typography-secondary css-var-test-id"
          >
            19:07
          </span>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-var-test-id"
        >
          requested changes on your pull request. Most of the comments are about naming and the test coverage of the new cache layer.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/listy/demo/rich.tsx extend context correctly 2`] = `[]`;

exports[`renders components/listy/demo/scroll-to.tsx extend context correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    class="ant-flex css-var-test-id ant-flex-wrap-wrap ant-flex-align-center ant-flex-gap-small"
  >
    <div
      aria-label="segmented control"
      aria-orientation="horizontal"
      class="ant-segmented css-var-test-id"
      role="radiogroup"
      tabindex="0"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected ant-segmented-item-selected-text"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="top"
          >
            top
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="bottom"
          >
            bottom
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="auto"
          >
            auto
          </div>
        </label>
      </div>
    </div>
    <div
      class="ant-space-compact"
    >
      <div
        class="ant-input-number ant-input-number-mode-input css-var-test-id ant-input-number-css-var ant-input-number-compact-item ant-input-number-compact-first-item ant-input-number-outlined"
        style="width: 70px;"
      >
        <input
          aria-valuemax="59"
          aria-valuemin="0"
          aria-valuenow="40"
          autocomplete="off"
          class="ant-input-number-input"
          role="spinbutton"
          step="1"
          value="40"
        />
        <div
          class="ant-input-number-actions"
        >
          <span
            aria-disabled="false"
            aria-label="Increase Value"
            class="ant-input-number-action ant-input-number-action-up"
            role="button"
            unselectable="on"
          >
            <span
              aria-label="up"
              class="anticon anticon-up"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="up"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                />
              </svg>
            </span>
          </span>
          <span
            aria-disabled="false"
            aria-label="Decrease Value"
            class="ant-input-number-action ant-input-number-action-down"
            role="button"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-compact-item ant-btn-compact-last-item"
        type="button"
      >
        <span>
          Scroll to item
        </span>
      </button>
    </div>
    <div
      class="ant-space-compact"
    >
      <div
        class="ant-select ant-select-outlined ant-select-compact-item ant-select-compact-first-item css-var-test-id ant-select-css-var ant-select-single ant-select-show-arrow"
        style="width: 110px;"
      >
        <div
          class="ant-select-content ant-select-content-has-value"
          title="Group 3"
        >
          Group 3
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            autocomplete="new-password"
            class="ant-select-input"
            id="test-id"
            readonly=""
            role="combobox"
            type="text"
            value=""
          />
        </div>
        <div
          class="ant-select-suffix"
        >
          <span
            aria-label="down"
            class="anticon anticon-down"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-var-test-id ant-select-css-var ant-select-dropdown-placement-bottomLeft"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div>
          <div
            id="test-id_list"
            role="listbox"
            style="height: 0px; width: 0px; overflow: hidden;"
          >
            <div
              aria-selected="false"
              id="test-id_list_0"
              role="option"
            >
              Group 0
            </div>
            <div
              aria-selected="false"
              id="test-id_list_1"
              role="option"
            >
              Group 1
            </div>
          </div>
          <div
            class="ant-select-dropdown-list"
            style="position: relative;"
          >
            <div
              class="ant-select-dropdown-list-holder"
              style="max-height: 256px; overflow-y: auto; overflow-anchor: none;"
            >
              <div>
                <div
                  class="ant-select-dropdown-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-disabled="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-active"
                    title="Group 0"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Group 0
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-disabled="false"
                    class="ant-select-item ant-select-item-option"
                    title="Group 1"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Group 1
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-disabled="false"
                    class="ant-select-item ant-select-item-option"
                    title="Group 2"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Group 2
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-disabled="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-selected"
                    title="Group 3"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Group 3
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-disabled="false"
                    class="ant-select-item ant-select-item-option"
                    title="Group 4"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Group 4
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-disabled="false"
                    class="ant-select-item ant-select-item-option"
                    title="Group 5"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      Group 5
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-compact-item ant-btn-compact-last-item"
        type="button"
      >
        <span>
          Scroll to group
        </span>
      </button>
    </div>
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Back to top
      </span>
    </button>
  </div>
  <div
    class="ant-listy css-var-test-id ant-listy-css-var"
    style="max-height: 400px; overflow-y: auto; overflow-anchor: none;"
  >
    <div
      class="ant-listy-group-section"
      data-key="group:Group 0"
    >
      <div
        class="ant-listy-group-header ant-listy-group-header-sticky"
      >
        Group 0
      </div>
      <div
        class="ant-listy-item"
        data-key="item:0"
      >
        Item 0
      </div>
      <div
        class="ant-listy-item"
        data-key="item:1"
      >
        Item 1
      </div>
      <div
        class="ant-listy-item"
        data-key="item:2"
      >
        Item 2
      </div>
      <div
        class="ant-listy-item"
        data-key="item:3"
      >
        Item 3
      </div>
      <div
        class="ant-listy-item"
        data-key="item:4"
      >
        Item 4
      </div>
      <div
        class="ant-listy-item"
        data-key="item:5"
      >
        Item 5
      </div>
      <div
        class="ant-listy-item"
        data-key="item:6"
      >
        Item 6
      </div>
      <div
        class="ant-listy-item"
        data-key="item:7"
      >
        Item 7
      </div>
      <div
        class="ant-listy-item"
        data-key="item:8"
      >
        Item 8
      </div>
      <div
        class="ant-listy-item"
        data-key="item:9"
      >
        Item 9
      </div>
    </div>
    <div
      class="ant-listy-group-section"
      data-key="group:Group 1"
    >
      <div
        class="ant-listy-group-header ant-listy-group-header-sticky"
      >
        Group 1
      </div>
      <div
        class="ant-listy-item"
        data-key="item:10"
      >
        Item 10
      </div>
      <div
        class="ant-listy-item"
        data-key="item:11"
      >
        Item 11
      </div>
      <div
        class="ant-listy-item"
        data-key="item:12"
      >
        Item 12
      </div>
      <div
        class="ant-listy-item"
        data-key="item:13"
      >
        Item 13
      </div>
      <div
        class="ant-listy-item"
        data-key="item:14"
      >
        Item 14
      </div>
      <div
        class="ant-listy-item"
        data-key="item:15"
      >
        Item 15
      </div>
      <div
        class="ant-listy-item"
        data-key="item:16"
      >
        Item 16
      </div>
      <div
        class="ant-listy-item"
        data-key="item:17"
      >
        Item 17
      </div>
      <div
        class="ant-listy-item"
        data-key="item:18"
      >
        Item 18
      </div>
      <div
        class="ant-listy-item"
        data-key="item:19"
      >
        Item 19
      </div>
    </div>
    <div
      class="ant-listy-group-section"
      data-key="group:Group 2"
    >
      <div
        class="ant-listy-group-header ant-listy-group-header-sticky"
      >
        Group 2
      </div>
      <div
        class="ant-listy-item"
        data-key="item:20"
      >
        Item 20
      </div>
      <div
        class="ant-listy-item"
        data-key="item:21"
      >
        Item 21
      </div>
      <div
        class="ant-listy-item"
        data-key="item:22"
      >
        Item 22
      </div>
      <div
        class="ant-listy-item"
        data-key="item:23"
      >
        Item 23
      </div>
      <div
        class="ant-listy-item"
        data-key="item:24"
      >
        Item 24
      </div>
      <div
        class="ant-listy-item"
        data-key="item:25"
      >
        Item 25
      </div>
      <div
        class="ant-listy-item"
        data-key="item:26"
      >
        Item 26
      </div>
      <div
        class="ant-listy-item"
        data-key="item:27"
      >
        Item 27
      </div>
      <div
        class="ant-listy-item"
        data-key="item:28"
      >
        Item 28
      </div>
      <div
        class="ant-listy-item"
        data-key="item:29"
      >
        Item 29
      </div>
    </div>
    <div
      class="ant-listy-group-section"
      data-key="group:Group 3"
    >
      <div
        class="ant-listy-group-header ant-listy-group-header-sticky"
      >
        Group 3
      </div>
      <div
        class="ant-listy-item"
        data-key="item:30"
      >
        Item 30
      </div>
      <div
        class="ant-listy-item"
        data-key="item:31"
      >
        Item 31
      </div>
      <div
        class="ant-listy-item"
        data-key="item:32"
      >
        Item 32
      </div>
      <div
        class="ant-listy-item"
        data-key="item:33"
      >
        Item 33
      </div>
      <div
        class="ant-listy-item"
        data-key="item:34"
      >
        Item 34
      </div>
      <div
        class="ant-listy-item"
        data-key="item:35"
      >
        Item 35
      </div>
      <div
        class="ant-listy-item"
        data-key="item:36"
      >
        Item 36
      </div>
      <div
        class="ant-listy-item"
        data-key="item:37"
      >
        Item 37
      </div>
      <div
        class="ant-listy-item"
        data-key="item:38"
      >
        Item 38
      </div>
      <div
        class="ant-listy-item"
        data-key="item:39"
      >
        Item 39
      </div>
    </div>
    <div
      class="ant-listy-group-section"
      data-key="group:Group 4"
    >
      <div
        class="ant-listy-group-header ant-listy-group-header-sticky"
      >
        Group 4
      </div>
      <div
        class="ant-listy-item"
        data-key="item:40"
      >
        Item 40
      </div>
      <div
        class="ant-listy-item"
        data-key="item:41"
      >
        Item 41
      </div>
      <div
        class="ant-listy-item"
        data-key="item:42"
      >
        Item 42
      </div>
      <div
        class="ant-listy-item"
        data-key="item:43"
      >
        Item 43
      </div>
      <div
        class="ant-listy-item"
        data-key="item:44"
      >
        Item 44
      </div>
      <div
        class="ant-listy-item"
        data-key="item:45"
      >
        Item 45
      </div>
      <div
        class="ant-listy-item"
        data-key="item:46"
      >
        Item 46
      </div>
      <div
        class="ant-listy-item"
        data-key="item:47"
      >
        Item 47
      </div>
      <div
        class="ant-listy-item"
        data-key="item:48"
      >
        Item 48
      </div>
      <div
        class="ant-listy-item"
        data-key="item:49"
      >
        Item 49
      </div>
    </div>
    <div
      class="ant-listy-group-section"
      data-key="group:Group 5"
    >
      <div
        class="ant-listy-group-header ant-listy-group-header-sticky"
      >
        Group 5
      </div>
      <div
        class="ant-listy-item"
        data-key="item:50"
      >
        Item 50
      </div>
      <div
        class="ant-listy-item"
        data-key="item:51"
      >
        Item 51
      </div>
      <div
        class="ant-listy-item"
        data-key="item:52"
      >
        Item 52
      </div>
      <div
        class="ant-listy-item"
        data-key="item:53"
      >
        Item 53
      </div>
      <div
        class="ant-listy-item"
        data-key="item:54"
      >
        Item 54
      </div>
      <div
        class="ant-listy-item"
        data-key="item:55"
      >
        Item 55
      </div>
      <div
        class="ant-listy-item"
        data-key="item:56"
      >
        Item 56
      </div>
      <div
        class="ant-listy-item"
        data-key="item:57"
      >
        Item 57
      </div>
      <div
        class="ant-listy-item"
        data-key="item:58"
      >
        Item 58
      </div>
      <div
        class="ant-listy-item"
        data-key="item:59"
      >
        Item 59
      </div>
    </div>
  </div>
  <span
    class="ant-typography ant-typography-secondary css-var-test-id"
  >
    scrollTop: 0px
  </span>
</div>
`;

exports[`renders components/listy/demo/scroll-to.tsx extend context correctly 2`] = `[]`;

exports[`renders components/listy/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="ant-listy acss-1hnaman css-var-test-id ant-listy-css-var"
  style="max-height: 260px; overflow-y: auto; overflow-anchor: none;"
>
  <div
    class="ant-listy-group-section"
    data-key="group:Design"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky acss-kblrtb"
    >
      Design
    </div>
    <div
      class="ant-listy-item"
      data-key="item:0"
      style="font-style: italic;"
    >
      Olivia
    </div>
    <div
      class="ant-listy-item"
      data-key="item:1"
      style="font-style: italic;"
    >
      Liam
    </div>
    <div
      class="ant-listy-item"
      data-key="item:2"
      style="font-style: italic;"
    >
      Emma
    </div>
  </div>
  <div
    class="ant-listy-group-section"
    data-key="group:Engineering"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky acss-kblrtb"
    >
      Engineering
    </div>
    <div
      class="ant-listy-item"
      data-key="item:3"
      style="font-style: italic;"
    >
      Noah
    </div>
    <div
      class="ant-listy-item"
      data-key="item:4"
      style="font-style: italic;"
    >
      Ava
    </div>
    <div
      class="ant-listy-item"
      data-key="item:5"
      style="font-style: italic;"
    >
      Ethan
    </div>
  </div>
  <div
    class="ant-listy-group-section"
    data-key="group:Marketing"
  >
    <div
      class="ant-listy-group-header ant-listy-group-header-sticky acss-kblrtb"
    >
      Marketing
    </div>
    <div
      class="ant-listy-item"
      data-key="item:6"
      style="font-style: italic;"
    >
      Sophia
    </div>
    <div
      class="ant-listy-item"
      data-key="item:7"
      style="font-style: italic;"
    >
      Lucas
    </div>
  </div>
</div>
`;

exports[`renders components/listy/demo/style-class.tsx extend context correctly 2`] = `[]`;
